--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,7 @@
     font-family: sans-serif;
     font-size: 15px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* outline: 1px solid red; */
 }
 
 #container {
