improve add funds/blacklist fuctionality

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -110,7 +110,7 @@
                             </div>
                             <div class="label-input">
                                 Contact
-                                <input placeholder="Contact number" id="vendor-contact" type="text" class="text-input"
+                                <input placeholder="Contact number (for stall operator)" id="vendor-contact" type="text" class="text-input"
                                     name="vendor-contact" />
                             </div>
                             <div class="label-input">
