--- a/static/css/style.css
+++ b/static/css/style.css
@@ -243,7 +243,7 @@ table tr:last-child {
 
 hr {
     border: none;
-    background-color: #ddd;
+    background-color: #eee;
     min-height: 2px;
     margin: 8px 0;
 }
