--- a/android_nfc_read_write/app/src/main/res/layout/activity_main.xml
+++ b/android_nfc_read_write/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:textAllCaps="true"
         android:textSize="30sp" />
 
-    <Button
+    <Button style="@style/Widget.AppCompat.Button"
         android:id="@+id/btnStartNode"
         android:layout_width="match_parent"
         android:layout_height="60dp"
