--- a/BuzzBraceletVendor/app/src/main/res/layout/activity_main.xml
+++ b/BuzzBraceletVendor/app/src/main/res/layout/activity_main.xml
@@ -77,4 +77,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvBalance" />
+
+    <TextView
+        android:id="@+id/tvNFCContent"
+        android:layout_width="367dp"
+        android:layout_height="21dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginBottom="7dp"
+        android:text="id"
+        app:layout_constraintBottom_toTopOf="@+id/nfc_contents"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvBalance"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
