--- a/BuzzBraceletVendor/app/src/main/res/layout/activity_main.xml
+++ b/BuzzBraceletVendor/app/src/main/res/layout/activity_main.xml
@@ -26,33 +26,23 @@
         app:layout_constraintTop_toBottomOf="@+id/include" />
 
     <Button
-        android:id="@+id/btnGetBalance"
-        android:layout_width="271dp"
-        android:layout_height="116dp"
-        android:layout_marginTop="76dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Get Balance"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvBalance" />
-
-    <Button
         android:id="@+id/btnSendTransaction"
         android:layout_width="271dp"
         android:layout_height="116dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="sans-serif-medium"
         android:text="Payment"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toBottomOf="@+id/lvList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnGetBalance" />
+        app:layout_constraintTop_toBottomOf="@+id/tvNFCContents"
+        app:layout_constraintVertical_bias="0.073" />
 
     <TextView
         android:id="@+id/tvNFCContents"
-        android:layout_width="368dp"
-        android:layout_height="44dp"
+        android:layout_width="369dp"
+        android:layout_height="66dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
         android:fontFamily="monospace"
